fleshing out initial setup and execution loop